// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/lib/logger debug should show timestamp and log if showDebug = true and showTime = true 1`] = `
[
  [
    "2012-12-26 07:40:00.025	test string",
  ],
]
`;

exports[`src/lib/logger debug should show timestamp and log if showDebug = true and showTime = true 2`] = `
[
  [
    "/log/root/2012.12.26_07.40.00.025.log",
    "2012-12-26 07:40:00.025	test string
",
  ],
]
`;

exports[`src/lib/logger debug should not show log by default 1`] = `
[
  [
    "/log/root/2012.12.26_07.40.00.025.log",
    "test string
",
  ],
]
`;

exports[`src/lib/logger debug should show log if showDebug = true 1`] = `
[
  [
    "test string",
  ],
]
`;

exports[`src/lib/logger debug should show log if showDebug = true 2`] = `
[
  [
    "/log/root/2012.12.26_07.40.00.025.log",
    "test string
",
  ],
]
`;

exports[`src/lib/logger error should apply red bright color to console 1`] = `
[
  [
    "<red>test1 /^\\d+$/ {
	"b": 2
}</red>
    at test.js:1:1
    at index.js:1:1",
  ],
]
`;

exports[`src/lib/logger error should apply red bright color to console 2`] = `
[
  [
    "/log/root/2012.12.26_07.40.00.025.log",
    "test1 /^\\d+$/ {
	"b": 2
}
    at test.js:1:1
    at index.js:1:1
",
  ],
]
`;

exports[`src/lib/logger error should apply red bright color to console and prepend timestamp if showTime = true 1`] = `
[
  [
    "2012-12-26 07:40:00.025	<red>test1 /^\\d+$/ {
	"b": 2
}</red>
    at test.js:1:1
    at index.js:1:1",
  ],
]
`;

exports[`src/lib/logger error should apply red bright color to console and prepend timestamp if showTime = true 2`] = `
[
  [
    "/log/root/2012.12.26_07.40.00.025.log",
    "2012-12-26 07:40:00.025	test1 /^\\d+$/ {
	"b": 2
}
    at test.js:1:1
    at index.js:1:1
",
  ],
]
`;

exports[`src/lib/logger error should log error with stack 1`] = `
[
  [
    "<red>test exception</red>
    at error.js:1:1",
  ],
]
`;

exports[`src/lib/logger error should log error with stack 2`] = `
[
  [
    "/log/root/2012.12.26_07.40.00.025.log",
    "test exception
    at error.js:1:1
",
  ],
]
`;

exports[`src/lib/logger error should log error without stack 1`] = `
[
  [
    "<red>test exception</red>",
  ],
]
`;

exports[`src/lib/logger error should log error without stack 2`] = `
[
  [
    "/log/root/2012.12.26_07.40.00.025.log",
    "test exception
",
  ],
]
`;

exports[`src/lib/logger info should apply green bright color to console 1`] = `
[
  [
    "<green>test1 /^\\d+$/ {
	"b": 2
}</green>",
  ],
]
`;

exports[`src/lib/logger info should apply green bright color to console 2`] = `
[
  [
    "/log/root/2012.12.26_07.40.00.025.log",
    "test1 /^\\d+$/ {
	"b": 2
}
",
  ],
]
`;

exports[`src/lib/logger info should apply green bright color to console and prepend timestamp if showTime = true 1`] = `
[
  [
    "2012-12-26 07:40:00.025	<green>test1 /^\\d+$/ {
	"b": 2
}</green>",
  ],
]
`;

exports[`src/lib/logger info should apply green bright color to console and prepend timestamp if showTime = true 2`] = `
[
  [
    "/log/root/2012.12.26_07.40.00.025.log",
    "2012-12-26 07:40:00.025	test1 /^\\d+$/ {
	"b": 2
}
",
  ],
]
`;

exports[`src/lib/logger log should log object 1`] = `
[
  [
    "{
	"a": 1,
	"second key": {
		"date": "26.12.2012, 07:40:00"
	}
}",
  ],
]
`;

exports[`src/lib/logger log should log object 2`] = `
[
  [
    "/log/root/2012.12.26_07.40.00.025.log",
    "{
	"a": 1,
	"second key": {
		"date": "26.12.2012, 07:40:00"
	}
}
",
  ],
]
`;

exports[`src/lib/logger log should log string 1`] = `
[
  [
    "test string",
  ],
]
`;

exports[`src/lib/logger log should log string 2`] = `
[
  [
    "/log/root/2012.12.26_07.40.00.025.log",
    "test string
",
  ],
]
`;

exports[`src/lib/logger log should log string, regex and object 1`] = `
[
  [
    "test1 /^\\d+$/ {
	"b": 2
}",
  ],
]
`;

exports[`src/lib/logger log should log string, regex and object 2`] = `
[
  [
    "/log/root/2012.12.26_07.40.00.025.log",
    "test1 /^\\d+$/ {
	"b": 2
}
",
  ],
]
`;

exports[`src/lib/logger log should log timestamp and string with showTime = true 1`] = `
[
  [
    "2012-12-26 07:40:00.025	test string",
  ],
]
`;

exports[`src/lib/logger log should log timestamp and string with showTime = true 2`] = `
[
  [
    "/log/root/2012.12.26_07.40.00.025.log",
    "2012-12-26 07:40:00.025	test string
",
  ],
]
`;

exports[`src/lib/logger log should log two strings 1`] = `
[
  [
    "test1 test2",
  ],
]
`;

exports[`src/lib/logger log should log two strings 2`] = `
[
  [
    "/log/root/2012.12.26_07.40.00.025.log",
    "test1 test2
",
  ],
]
`;

exports[`src/lib/logger trace should append stack and not show log if showDebug = false 1`] = `
[
  [
    "/log/root/2012.12.26_07.40.00.025.log",
    "test string
    at test.js:1:1
    at index.js:1:1
",
  ],
]
`;

exports[`src/lib/logger trace should append stack and show log if showDebug = true 1`] = `
[
  [
    "test string
    at test.js:1:1
    at index.js:1:1",
  ],
]
`;

exports[`src/lib/logger trace should append stack and show log if showDebug = true 2`] = `
[
  [
    "/log/root/2012.12.26_07.40.00.025.log",
    "test string
    at test.js:1:1
    at index.js:1:1
",
  ],
]
`;

exports[`src/lib/logger trace should append stack and show timestamp and log if showDebug = true and showTime = true 1`] = `
[
  [
    "2012-12-26 07:40:00.025	test string
    at test.js:1:1
    at index.js:1:1",
  ],
]
`;

exports[`src/lib/logger trace should append stack and show timestamp and log if showDebug = true and showTime = true 2`] = `
[
  [
    "/log/root/2012.12.26_07.40.00.025.log",
    "2012-12-26 07:40:00.025	test string
    at test.js:1:1
    at index.js:1:1
",
  ],
]
`;

exports[`src/lib/logger warn should apply yellow bright color to console 1`] = `
[
  [
    "<yellow>test1 /^\\d+$/ {
	"b": 2
}</yellow>",
  ],
]
`;

exports[`src/lib/logger warn should apply yellow bright color to console 2`] = `
[
  [
    "/log/root/2012.12.26_07.40.00.025.log",
    "test1 /^\\d+$/ {
	"b": 2
}
",
  ],
]
`;

exports[`src/lib/logger warn should apply yellow bright color to console and prepend timestamp if showTime = true 1`] = `
[
  [
    "2012-12-26 07:40:00.025	<yellow>test1 /^\\d+$/ {
	"b": 2
}</yellow>",
  ],
]
`;

exports[`src/lib/logger warn should apply yellow bright color to console and prepend timestamp if showTime = true 2`] = `
[
  [
    "/log/root/2012.12.26_07.40.00.025.log",
    "2012-12-26 07:40:00.025	test1 /^\\d+$/ {
	"b": 2
}
",
  ],
]
`;
